--- a/pageidmap.conf
+++ b/pageidmap.conf
@@ -2,9 +2,13 @@
 # This file uses INI format with sections
 
 [database]
+# Database type: mysql, mariadb, postgresql
+# Determines connection driver and default port
+db_type = mysql
+
 # Database connection settings
 host = localhost
-port = 3306
+# port = 3306  # Auto-detected: MySQL/MariaDB=3306, PostgreSQL=5432
 database = confluence
 user = confluence_user
 password = 
@@ -15,19 +19,28 @@ ssl_enabled = false
 ssl_verify_cert = true
 ssl_verify_identity = true
 
-# SSL certificate paths (only needed if ssl_enabled = true)
+# SSL certificate paths 
+# MySQL/MariaDB format:
 ssl_ca = /path/to/ca-cert.pem
 ssl_cert = /path/to/client-cert.pem
 ssl_key = /path/to/client-key.pem
+
+# Note: For PostgreSQL, these are automatically mapped to:
+# ssl_ca -> sslrootcert, ssl_cert -> sslcert, ssl_key -> sslkey
+# ssl_verify_cert controls sslmode (require vs verify-ca)
 
 [processing]
 # Default space keys to process (comma-separated)
 # These are used when no -s/--spaces parameter is provided
 default_spaces = INFO,DOCS
 
-# Default output format: tsv, csv, json
+# Default output format: tsv, csv, json, nginx, apache
 # Can be overridden with --output-format parameter
 output_format = tsv
+
+# Target domain for nginx/apache rewrites (required for nginx/apache formats)
+# Example: company.atlassian.net
+target_domain = company.atlassian.net
 
 # Silent mode (no stderr output)
 # Can be overridden with --silent parameter
